--- a/package.json
+++ b/package.json
@@ -29,8 +29,11 @@
     "clsx": "^2.1.1",
     "dotenv": "^16.4.5",
     "drizzle-orm": "^0.33.0",
+    "jodit": "^4.2.47",
+    "jodit-react": "^4.1.2",
     "jose": "^5.9.2",
     "lucide-react": "^0.441.0",
+    "mime-types": "^2.1.35",
     "next": "15.0.0-canary.190",
     "postcss": "^8.4.47",
     "postgres": "^3.4.4",
