--- a/package.json
+++ b/package.json
@@ -15,15 +15,16 @@
     "@aws-sdk/s3-presigned-post": "^3.744.0",
     "@radix-ui/react-avatar": "^1.1.0",
     "@radix-ui/react-dropdown-menu": "^2.1.1",
-    "@radix-ui/react-icons": "^1.3.0",
+    "@radix-ui/react-icons": "^1.3.2",
     "@radix-ui/react-label": "^2.1.0",
     "@radix-ui/react-radio-group": "^1.2.0",
     "@radix-ui/react-scroll-area": "^1.1.0",
     "@radix-ui/react-separator": "^1.1.0",
     "@radix-ui/react-slot": "^1.1.0",
+    "@radix-ui/react-switch": "^1.1.3",
     "@types/bcryptjs": "^2.4.6",
     "@types/node": "^22.5.5",
-    "@types/react": "npm:types-react@19.0.0-rc.1",
+    "@types/react": "^18.3.1",
     "@types/react-dom": "npm:types-react-dom@19.0.0-rc.1",
     "autoprefixer": "^10.4.20",
     "bcryptjs": "^2.4.3",
@@ -39,8 +40,8 @@
     "next": "15.0.0-canary.190",
     "postcss": "^8.4.47",
     "postgres": "^3.4.4",
-    "react": "19.0.0-rc-cd22717c-20241013",
-    "react-dom": "19.0.0-rc-cd22717c-20241013",
+    "react": "^18.3.1",
+    "react-dom": "^18.3.1",
     "server-only": "^0.0.1",
     "stripe": "^16.12.0",
     "tailwind-merge": "^2.5.2",
