--- a/package.json
+++ b/package.json
@@ -46,6 +46,7 @@
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-quill-new": "^3.4.6",
+    "resend": "^4.5.0",
     "server-only": "^0.0.1",
     "stripe": "^16.12.0",
     "tailwind-merge": "^2.5.2",
@@ -54,6 +55,7 @@
     "tailwindcss-animate": "^1.0.7",
     "tailwindcss-react-aria-components": "1.1.5",
     "typescript": "^5.6.2",
+    "uuid": "^11.1.0",
     "zod": "^3.23.8"
   },
   "devDependencies": {
