--- a/package.json
+++ b/package.json
@@ -38,10 +38,12 @@
     "@types/react-dom": "npm:types-react-dom@19.0.0-rc.1",
     "autoprefixer": "^10.4.20",
     "bcryptjs": "^2.4.3",
+    "browser-image-compression": "^2.0.2",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
     "dotenv": "^16.4.5",
     "drizzle-orm": "^0.33.0",
+    "heic2any": "^0.0.4",
     "jodit": "^4.2.47",
     "jodit-react": "^4.1.2",
     "jose": "^5.9.2",
