--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@aws-sdk/s3-presigned-post": "^3.744.0",
     "@dnd-kit/core": "^6.3.1",
     "@dnd-kit/sortable": "^10.0.0",
+    "@radix-ui/react-alert-dialog": "^1.1.14",
     "@radix-ui/react-avatar": "^1.1.0",
     "@radix-ui/react-dropdown-menu": "^2.1.1",
     "@radix-ui/react-icons": "^1.3.2",
@@ -22,8 +23,9 @@
     "@radix-ui/react-radio-group": "^1.2.0",
     "@radix-ui/react-scroll-area": "^1.1.0",
     "@radix-ui/react-separator": "^1.1.0",
-    "@radix-ui/react-slot": "^1.1.0",
+    "@radix-ui/react-slot": "^1.2.3",
     "@radix-ui/react-switch": "^1.1.3",
+    "@radix-ui/react-toast": "^1.2.14",
     "@tiptap/extension-color": "^2.12.0",
     "@tiptap/extension-font-family": "^2.12.0",
     "@tiptap/extension-text-align": "^2.12.0",
@@ -39,7 +41,7 @@
     "autoprefixer": "^10.4.20",
     "bcryptjs": "^2.4.3",
     "browser-image-compression": "^2.0.2",
-    "class-variance-authority": "^0.7.0",
+    "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "dotenv": "^16.4.5",
     "drizzle-orm": "^0.33.0",
@@ -55,16 +57,18 @@
     "quill": "^2.0.3",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
+    "react-hot-toast": "^2.5.2",
     "react-quill-new": "^3.4.6",
     "resend": "^4.5.0",
     "server-only": "^0.0.1",
     "stripe": "^16.12.0",
-    "tailwind-merge": "^2.5.2",
+    "tailwind-merge": "^2.6.0",
     "tailwind-scrollbar": "^3.1.0",
     "tailwindcss": "^3.4.12",
     "tailwindcss-animate": "^1.0.7",
     "tailwindcss-react-aria-components": "1.1.5",
     "typescript": "^5.6.2",
+    "use-toast-notification": "^0.1.3",
     "uuid": "^11.1.0",
     "zod": "^3.23.8"
   },
